# ente

./: README.md
cli/: go.mod  go.sum
desktop/: package-lock.json
docs/: package-lock.json
infra/ml/: pyproject.toml
infra/staff/: package-lock.json  package.json
infra/workers/: package-lock.json  package.json
server/: go.mod  go.sum
web/: package-lock.json
web/apps/payments/: package.json
