[project]
name = "ente-clean-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "onnx>=1.22.0",
    "onnxconverter-common>=1.14.0",
    "onnxruntime-extensions>=0.12.0",
    "onnxruntime>=1.19.2",
    "onnxsim>=0.4.36",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow-heif>=0.21.0",
    "pillow>=12.2.0",
    "pip>=26.1.2",
    "pyyaml>=6.0.2",
    "requests>=2.33.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "torch>=2.13.0",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
